# Opti-Q

./: .gitattributes  .gitignore  README.md  calculate_cost.py  pyproject.toml  requirements.txt  test_set_Opti-Q.csv  test_update.csv
config/: default.yaml
config/experiments/: dp_baseline.yaml  dp_level2_no_pruning.yaml  dp_level2_with_pruning.yaml  hc_baseline.yaml  nsga2_baseline.yaml  nsga2_test_quick.yaml
data/raw/levels/: level_0_data.csv  level_1_data.csv  level_2_data.csv
experiments/: compare_dp_hc_nsga.py  compare_eps_vs_delta_dp.py  hypervolume_pygmo.py  run_delta_experiment.py  run_dp.py  run_moqo.py  run_nsga.py
old/: config.py  individual.py  main.py  randommoqo.py
results/: algorithm_comparison_k1to5.csv  delta_solutions.csv  eps_vs_delta_dp.csv  table_comparison.tex
results/DP/Levels/: level_0.csv  level_1.csv
results/NSGA-II/NSGA-II Hyper-Parameters/: ranked_topsis_params.csv
results/NSGA-II/budgets/: b1_feasible.csv  b1_infeasible.csv  b2_feasible.csv  b2_infeasible.csv  b3_feasible.csv  b3_infeasible.csv  b4_infeasible.csv  b5_infeasible.csv
results/NSGA-II/diversity/: diversity1.csv
results/nsga/Operations/: k_1_operations.csv
scripts/: calculate_metrics.ipynb  calculate_qoa.ipynb  plan_collection.ipynb
src/llm_dag_optimizer/: __init__.py
src/llm_dag_optimizer/config/: __init__.py  defaults.py  settings.py
src/llm_dag_optimizer/core/: __init__.py  fptas.py  moqo.py  nsga2.py
src/llm_dag_optimizer/evaluation/: __init__.py  evaluator.py
src/llm_dag_optimizer/operators/: __init__.py  crossover.py  mutation.py  selection.py
src/llm_dag_optimizer/structures/: __init__.py  dag.py  individual.py  metrics.py
tests/: test_all_algorithms.py  test_all_k4.py  test_fptas_k4_quick.py  test_hypervolume_correctness.py  test_imports.py  test_integration.py
